--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'org.springframework.security:spring-security-test'
+    testCompileOnly 'junit:junit:4.12' // available JUnit4 versions
 }
 
 test {
