--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     }
     testImplementation 'org.springframework.security:spring-security-test'
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile 'pl.pragmatists:JUnitParams:1.1.1'
     testCompileOnly 'junit:junit:4.12' // available JUnit4 versions
 }
 
