feat: add async task execution thread setting in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JWT setting
+# async task execution thread setting
+spring.task.execution.pool.core-size=8
+spring.task.execution.pool.max-size=8
 
