fix: add setting for handling LocalDateTime serialize error issue. https://stackoverflow.com/questions/45863678/json-parse-error-can-not-construct-instance-of-java-time-localdate-no-string-a?rq=1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # JPA
-spring.jpa.show_sql=true
+#spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
@@ -19,3 +19,9 @@ spring.datasource.password=
 spring.task.execution.pool.core-size=8
 spring.task.execution.pool.max-size=8
 
+# cache setting
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+spring.jackson.serialization.write-dates-as-timestamps=false
