fix: fix server.port properties

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=mycoupon-service
-service.port=${PORT:0}
+server.port=8083
 eureka.instance.instance-id=\
   ${spring.application.name}:${spring.application.instance_id:${random.value}}
