feat: add kafka settings in application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+# setting profile
+spring.profiles.active=local
+
+# kafka settings
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=alarmtalk-group-id
+spring.kafka.consumer.max-poll-records=10
