--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.org.springframework.transaction.interceptor=TRACE
+
 # JPA
 #spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
